[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ice_breaker"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.160"
openai = "^0.27.6"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
